load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "renderercommon_support",
    srcs = [
        "puff.c",
    ],
    hdrs = [
        "puff.h",
    ],
    visibility = ["//code/renderercommon:__pkg__"],
    deps = [
        ":common",
        ":q_shared",
    ],
)

# TODO: Separate out headers for cvars to here? Actually lets create a much better console var library that is probably inspired by the work in q2java modernized
cc_library(
    name = "cvar",
    srcs = [
        "cvar.c",
    ],
    deps = [
        ":q_shared",
        ":qcommon",
    ],
)

cc_library(
    name = "vm",
    srcs = [
        "vm.c",
        "vm_interpreted.c",
    ],
    hdrs = [
        "vm_local.h",
    ],
    deps = [
        ":q_shared",
        ":qcommon",
    ],
)

cc_library(
    name = "vm_x86",
    srcs = [
        "vm_x86.c",
    ],
    deps = [
        ":vm",
        ":q_shared",
        ":qcommon",
    ],
)

cc_library(
    name = "files",
    srcs = [
        "files.c",
    ],
    deps = [
        ":q_shared",
        ":qcommon",
        ":unzip",
    ],
)

# TODO: Use shared version or move this to third_party?
cc_library(
    name = "unzip",
    srcs = [
        "ioapi.c",
        "ioapi.h",
        "unzip.c",
    ],
    hdrs = [
        "unzip.h",
    ],
    defines = ["USE_LOCAL_HEADERS"],
    deps = [
        ":q_shared",
        ":qcommon",
        "//third_party/zlib",
    ],
)

cc_library(
    name = "net",
    srcs = [
        "huffman.c",
        "md4.c",
        "md5.c",
        "msg.c",
        "net_chan.c",
        "net_ip.c",
    ],
    deps = [
        ":common",
        ":q_shared",
        ":qcommon",
    ],
)

cc_library(
    name = "common",
    srcs = [
        "q_math.c",
        "q_shared.c",
    ],
    hdrs = [
        "puff.h",
    ],
    visibility = ["//code/cgame:__pkg__"],
    deps = [
        ":q_shared",
    ],
)

cc_library(
    name = "q_shared",
    hdrs = [
        "q_platform.h",
        "q_shared.h",
        "surfaceflags.h",
    ],
    visibility = [
        "//code:__subpackages__",
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/game:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/server:__pkg__",
        "//code/ui:__pkg__",
    ],
)

cc_library(
    name = "qfiles",
    hdrs = ["qfiles.h"],
    visibility = ["//code/renderergl1:__pkg__"],
)

cc_library(
    name = "qcommon",
    hdrs = [
        "cm_public.h",
        "qcommon.h",
    ],
    visibility = [
        "//code/botlib:__pkg__",
        "//code/client:__pkg__",
        "//code/renderergl1:__pkg__",
        "//code/sdl:__pkg__",
        "//code/server:__pkg__",
        "//code/sys:__pkg__",
    ],
    deps = [
        ":q_shared",
        ":qfiles",
    ],
)
