# TODO: Separate out headers for cvars to here? Actually lets create a much better console var library that is probably inspired by the work in q2java modernized
cc_library(
    name = "cvar",
    srcs = [
        "cvar.c",
    ],
    deps = [
        ":shared_api",
        ":qcommon",
    ],
)

cc_library(
    name = "vm",
    srcs = [
        "vm.c",
        "vm_interpreted.c",
    ],
    hdrs = [
        "vm_local.h",
    ],
    deps = [
        ":shared_api",
        ":qcommon",
    ],
)

cc_library(
    name = "files",
    srcs = [
        "files.c",
    ],
    deps = [
        ":shared_api",
        ":qcommon",
        "//third_party/unzip",
    ],
)

cc_library(
    name = "files-dedicated",
    srcs = [
        "files.c",
    ],
    defines = ["DEDICATED"],
    deps = [
        ":shared_api",
        ":qcommon",
        "//third_party/unzip",
    ],
)

cc_library(
    name = "net",
    srcs = [
        "huffman.c",
        "md4.c",
        "msg.c",
        "net_chan.c",
        "net_ip.c",
    ],
    deps = [
        ":shared",
        ":shared_api",
        ":qcommon",
    ],
)

cc_library(
    name = "net-dedicated",
    srcs = [
        "huffman.c",
        "md4.c",
        "msg.c",
        "net_chan.c",
        "net_ip.c",
    ],
    defines = ["DEDICATED"],
    deps = [
        ":shared",
        ":shared_api",
        ":qcommon",
    ],
)


cc_library(
    name = "common",
    srcs = [
        "common.c",
    ],
    deps = [
        ":shared_api",
        ":qcommon",
    ],
)

cc_library(
    name = "shared",
    srcs = [
        "q_math.c",
        "q_shared.c",
    ],
    visibility = ["//code/cgame:__pkg__"],
    deps = [
        ":shared_api",
    ],
)

cc_library(
    name = "shared_api",
    hdrs = [
        "q_platform.h",
        "q_shared.h",
        "surfaceflags.h",
    ],
    visibility = [
        "//code:__subpackages__",
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/game:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/server:__pkg__",
        "//code/ui:__pkg__",
        "//third_party/unzip:__pkg__",
    ],
)

cc_library(
    name = "qfiles",
    hdrs = ["qfiles.h"],
    visibility = [
        "//code/renderergl1:__pkg__",
        "//code/renderergl2:__pkg__",
    ],
)

# collision map library
cc_library(
    name = "cm",
    srcs = [
        "cm_load.c",
        "cm_local.h",
        "cm_patch.c",
        "cm_patch.h",
        "cm_polylib.c",
        "cm_polylib.h",
        "cm_test.c",
        "cm_trace.c",
    ],
    hdrs = ["cm_local.h"],
    deps = [
        ":shared_api",
        ":qcommon",
    ],
)

cc_library(
    name = "qcommon",
    hdrs = [
        "cm_public.h",
        "qcommon.h",
    ],
    includes = ["."],
    visibility = [
        "//code/botlib:__pkg__",
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/renderergl1:__pkg__",
        "//code/renderergl2:__pkg__",
        "//code/sdl:__pkg__",
        "//code/server:__pkg__",
        "//code/sys:__pkg__",
        "//third_party/unzip:__pkg__",
    ],
    deps = [
        ":shared_api",
        ":qfiles",
    ],
)

_CMD_SRC = ["cmd.c"]

cc_library(
    name = "cmd",
    srcs = _CMD_SRC,
    deps = [
        ":shared_api",
        ":qcommon",
    ],
)

cc_library(
    name = "cmd-dedicated",
    srcs = _CMD_SRC,
    defines = ["DEDICATED"],
    deps = [
        ":shared_api",
        ":qcommon",
    ],
)
