# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "ENGINE_DEFINES", "EXTRA_WARNINGS", "FULL_WARNINGS", "SERVER_ONLY_ENGINE_DEFINES")

cc_library(
    name = "qbraincheck",
    hdrs = ["qbraincheck.h"],
    copts = EXTRA_WARNINGS,
    includes = ["."],
    visibility = [
        "//code/server:__pkg__",
    ],
    deps = [
        ":qcommon",
        "@braincheck",
    ],
)

# TODO: Separate out headers for cvars to here? Actually lets create a much better console var library that is probably inspired by the work in q2java modernized
cc_library(
    name = "cvar",
    srcs = ["cvar.c"],
    copts = EXTRA_WARNINGS,
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        ":qcommon",
        ":shared_api",
    ],
)

cc_library(
    name = "vm",
    srcs = [
        "vm.c",
        "vm_interpreted.c",
    ],
    hdrs = ["vm_local.h"],
    copts = EXTRA_WARNINGS,
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        ":qcommon",
        ":shared_api",
    ],
)

cc_library(
    name = "files",
    srcs = ["files.c"],
    copts = EXTRA_WARNINGS,
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":qcommon",
        ":shared_api",
        "@zlib//:unzip",
    ],
)

cc_library(
    name = "files-dedicated",
    srcs = ["files.c"],
    copts = EXTRA_WARNINGS,
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":qcommon",
        ":shared_api",
        "@zlib//:unzip",
    ],
)

cc_library(
    name = "md4",
    srcs = ["md4.c"],
    copts = FULL_WARNINGS,
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        ":qcommon",
        "//third_party/md4",
    ],
)

cc_library(
    name = "net",
    srcs = [
        "huffman.c",
        "msg.c",
        "net_chan.c",
        "net_ip.c",
    ],
    copts = EXTRA_WARNINGS,
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        ":qcommon",
        ":shared",
        ":shared_api",
    ],
)

cc_library(
    name = "net-dedicated",
    srcs = [
        "huffman.c",
        "msg.c",
        "net_chan.c",
        "net_ip.c",
    ],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":qcommon",
        ":shared",
        ":shared_api",
    ],
)

cc_library(
    name = "common",
    srcs = [
        "common.c",
    ],
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":qcommon",
        ":shared_api",
    ],
)

cc_library(
    name = "common-dedicated",
    srcs = ["common.c"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":qcommon",
        ":shared_api",
    ],
)

cc_library(
    name = "shared",
    srcs = [
        "q_math.c",
        "q_shared.c",
    ],
    copts = EXTRA_WARNINGS,
    visibility = [
        "//code/cgame:__pkg__",
        "//code/game:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":base",
        ":shared_api",
    ],
)

cc_library(
    name = "shared_api",
    hdrs = [
        "cvar_common.h",
        "cvar_engine.h",
        "q_platform.h",
        "q_shared.h",
        "qengine.h",
        "surfaceflags.h",
    ],
    includes = ["."],
    visibility = [
        "//code/botlib:__pkg__",
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/collision_map:__pkg__",
        "//code/game:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/renderer:__pkg__",
        "//code/server:__pkg__",
        "//code/sys:__pkg__",
        "//code/ui:__pkg__",
        "//third_party/unzip:__pkg__",
    ],
    deps = [":base"],
)

cc_library(
    name = "voicechat",
    hdrs = ["voicechat.h"],
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/game:__pkg__",
    ],
)

cc_library(
    name = "qfiles",
    hdrs = ["qfiles.h"],
    visibility = ["//code/renderer:__pkg__"],
)

cc_library(
    name = "base",
    hdrs = ["attributes.h"],
    copts = FULL_WARNINGS,
    visibility = ["//code/renderer:__pkg__"],
)

cc_library(
    name = "plugin",
    hdrs = ["plugin.h"],
    copts = FULL_WARNINGS,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/game:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":base",
        ":qcommon",
    ],
)

cc_library(
    name = "qcommon",
    hdrs = ["qcommon.h"],
    includes = ["."],
    visibility = [
        "//code/botlib:__pkg__",
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/collision_map:__pkg__",
        "//code/renderer:__pkg__",
        "//code/sdl:__pkg__",
        "//code/server:__pkg__",
        "//code/sys:__pkg__",
        "@zlib//:__pkg__",
    ],
    deps = [
        ":base",
        ":qfiles",
        ":shared_api",
        "//code/collision_map:cm",
    ],
)

_CMD_SRC = ["cmd.c"]

cc_library(
    name = "cmd",
    srcs = _CMD_SRC,
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":qcommon",
        ":shared_api",
    ],
)

cc_library(
    name = "cmd-dedicated",
    srcs = _CMD_SRC,
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":qcommon",
        ":shared_api",
    ],
)
