# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "FULL_WARNINGS")

LIBRARY_COPTS = FULL_WARNINGS + [
    "-Wno-padded",
    "-Wno-cast-align",
    "-Wno-sign-conversion",
    "-Wno-double-promotion",
    "-Wno-float-equal",
    "-Wno-shorten-64-to-32",
    "-Wno-float-conversion",
    "-Wno-implicit-float-conversion",
    "-Wno-implicit-int-conversion",
    "-Wno-sign-compare",
    "-Wno-pointer-to-int-cast",
    "-Wno-switch-enum",
    "-Wno-covered-switch-default",
]

cc_library(
    name = "api",
    hdrs = [
        "tr_public.h",
        "tr_types.h",
    ],
    copts = FULL_WARNINGS,
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
)

cc_library(
    name = "qgl",
    hdrs = ["qgl.h"],
    copts = LIBRARY_COPTS,
    deps = ["//code/macosx:qgl"],
)

cc_library(
    name = "renderer",
    srcs = [
        "tr_animation.c",
        "tr_backend.c",
        "tr_bsp.c",
        "tr_cmds.c",
        "tr_curve.c",
        "tr_flares.c",
        "tr_font.c",
        "tr_init.c",
        "tr_light.c",
        "tr_main.c",
        "tr_marks.c",
        "tr_mesh.c",
        "tr_model.c",
        "tr_noise.c",
        "tr_scene.c",
        "tr_shade.c",
        "tr_shade_calc.c",
        "tr_shader.c",
        "tr_shadows.c",
        "tr_sky.c",
        "tr_surface.c",
        "tr_world.c",
    ],
    hdrs = [
        "tr_local.h",
    ],
    copts = LIBRARY_COPTS,
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":api",
        ":qgl",
        "//code/macosx:qgl",
        "//code/qcommon:files",
        "//code/qcommon:shared_api",
    ],
)
