# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "FULL_WARNINGS")

LIBRARY_COPTS = FULL_WARNINGS + [
    "-Wno-padded",
    "-Wno-cast-align",
    "-Wno-sign-conversion",
    "-Wno-double-promotion",
    "-Wno-float-equal",
    "-Wno-shorten-64-to-32",
    "-Wno-float-conversion",
    "-Wno-implicit-float-conversion",
    "-Wno-implicit-int-conversion",
    "-Wno-sign-compare",
    "-Wno-pointer-to-int-cast",
    "-Wno-switch-enum",
    "-Wno-covered-switch-default",
]

cc_library(
    name = "api",
    hdrs = [
        "tr_public.h",
        "tr_types.h",
    ],
    copts = FULL_WARNINGS,
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
)

cc_library(
    name = "qgl",
    hdrs = ["qgl.h"],
    copts = LIBRARY_COPTS,
    deps = ["//code/macosx:qgl"],
)

cc_library(
    name = "local_api",
    hdrs = ["tr_local.h"],
    copts = LIBRARY_COPTS,
    deps = [
        ":api",
        ":qgl",
        "//code/qcommon:files",
        "//code/qcommon:shared_api",
    ],
)

DEPS = [
    ":api",
    ":local_api",
    ":qgl",
    "//code/macosx:qgl",
    "//code/qcommon:files",
    "//code/qcommon:shared_api",
]

cc_library(
    name = "tr_animation",
    srcs = ["tr_animation.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_backend",
    srcs = ["tr_backend.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_bsp",
    srcs = ["tr_bsp.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_cmds",
    srcs = ["tr_cmds.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_curve",
    srcs = ["tr_curve.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_flares",
    srcs = ["tr_flares.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_font",
    srcs = ["tr_font.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_init",
    srcs = ["tr_init.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_light",
    srcs = ["tr_light.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_main",
    srcs = ["tr_main.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_marks",
    srcs = ["tr_marks.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_mesh",
    srcs = ["tr_mesh.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_model",
    srcs = ["tr_model.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_noise",
    srcs = ["tr_noise.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_scene",
    srcs = ["tr_scene.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_shade",
    srcs = ["tr_shade.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_shade_calc",
    srcs = ["tr_shade_calc.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_shader",
    srcs = ["tr_shader.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_shadows",
    srcs = ["tr_shadows.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_sky",
    srcs = ["tr_sky.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_surface",
    srcs = ["tr_surface.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "tr_world",
    srcs = ["tr_world.c"],
    copts = LIBRARY_COPTS,
    deps = DEPS,
)

cc_library(
    name = "renderer",
    copts = LIBRARY_COPTS,
    deps = [
        ":tr_animation",
        ":tr_backend",
        ":tr_bsp",
        ":tr_cmds",
        ":tr_curve",
        ":tr_flares",
        ":tr_font",
        ":tr_init",
        ":tr_light",
        ":tr_main",
        ":tr_marks",
        ":tr_mesh",
        ":tr_model",
        ":tr_noise",
        ":tr_scene",
        ":tr_shade",
        ":tr_shade_calc",
        ":tr_shader",
        ":tr_shadows",
        ":tr_sky",
        ":tr_surface",
        ":tr_world",
    ],
)
