cc_library(
    name = "api",
    hdrs = [
        "tr_public.h",
        "tr_types.h",
    ],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/renderergl1:__pkg__",
        "//code/sdl:__pkg__",
        "//code/ui:__pkg__",
    ],
)

cc_library(
    name = "renderercommon",
    srcs = [
        "iqm.h",
        "qgl.h",
        "tr_common.h",
        "tr_font.c",
        "tr_image_bmp.c",
        "tr_image_jpg.c",
        "tr_image_pcx.c",
        "tr_image_png.c",
        "tr_image_tga.c",
        "tr_noise.c",
    ],
    visibility = [
        "//code/renderergl1:__pkg__",
        "//code/renderergl2:__pkg__",
        "//code/sdl:__pkg__",
    ],
    deps = [
        ":api",
        "//code/qcommon:puff",
        "//third_party/jpeg",
        "//third_party/sdl",
    ],
)
