# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("//build_defs:rules.bzl", "FULL_WARNINGS")

cc_library(
    name = "api",
    hdrs = [
        "tr_public.h",
        "tr_types.h",
    ],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/sdl:__pkg__",
        "//code/ui:__pkg__",
    ],
)

cc_library(
    name = "internal_api",
    hdrs = [
        "iqm.h",
        "qgl.h",
        "tr_common.h",
    ],
    deps = [
        ":api",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "imagelib",
    srcs = ["tr_image_png.c"],
    copts = FULL_WARNINGS,
    deps = [
        ":api",
        ":internal_api",
        "//code/qcommon:shared_api",
        "@libspng",
    ],
)

cc_library(
    name = "renderercommon",
    srcs = [
        "tr_font.c",
        "tr_image_jpg.c",
        "tr_noise.c",
    ],
    visibility = [
        "//code/renderergl2:__pkg__",
        "//code/sdl:__pkg__",
    ],
    deps = [
        ":api",
        ":imagelib",
        ":internal_api",
        "//code/qcommon:shared_api",
        "//third_party/sdl",
        "@libjpeg_turbo//:jpeg",
    ],
)
