cc_library(
    name = "local",
    hdrs = [
        "tr_local.h",
    ],
    includes = ["."],
    deps = [
        "//code/qcommon",
        "//code/qcommon:qfiles",
        "//code/renderercommon",
    ],
)

cc_library(
    name = "renderergl1",
    srcs = [
        "tr_animation.c",
        "tr_backend.c",
        "tr_bsp.c",
        "tr_cmds.c",
        "tr_curve.c",
        "tr_flares.c",
        "tr_image.c",
        "tr_init.c",
        "tr_light.c",
        "tr_main.c",
        "tr_marks.c",
        "tr_mesh.c",
        "tr_model.c",
        "tr_model_iqm.c",
        "tr_scene.c",
        "tr_shade.c",
        "tr_shade_calc.c",
        "tr_shader.c",
        "tr_shadows.c",
        "tr_sky.c",
        "tr_surface.c",
        "tr_world.c",
    ],
    includes = ["."],
    deps = [
        ":local",
        "//code/qcommon",
        "//code/qcommon:qfiles",
        "//code/renderercommon",
    ],
)

cc_library(
    name = "tr_subs",
    srcs = [
        "tr_subs.c",
    ],
    includes = ["."],
    deps = [
        ":local",
        "//code/qcommon",
        "//code/qcommon:qfiles",
        "//code/renderercommon",
    ],
)

# See comment at //code/renderergl2:librenderergl2
cc_binary(
    name = "librenderergl1",
    linkshared = 1,
    deps = [
        ":renderergl1",
        ":tr_subs",
    ],
)
