# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//build_defs:rules.bzl", "DIST_VISIBILITY")

cc_library(
    name = "local",
    srcs = [
        "tr_extramath.h",
        "tr_extratypes.h",
        "tr_postprocess.h",
    ],
    hdrs = [
        "tr_fbo.h",
        "tr_local.h",
    ],
    includes = ["."],
    deps = [
        "//code/qcommon",
        "//code/qcommon:qfiles",
        "//code/renderercommon",
    ],
)

cc_library(
    name = "renderergl2",
    srcs = [
        "tr_animation.c",
        "tr_backend.c",
        "tr_bsp.c",
        "tr_cmds.c",
        "tr_curve.c",
        "tr_dsa.c",
        "tr_dsa.h",
        "tr_extensions.c",
        "tr_extramath.c",
        "tr_fbo.c",
        "tr_flares.c",
        "tr_glsl.c",
        "tr_image.c",
        "tr_image_dds.c",
        "tr_init.c",
        "tr_light.c",
        "tr_main.c",
        "tr_marks.c",
        "tr_mesh.c",
        "tr_model.c",
        "tr_model_iqm.c",
        "tr_postprocess.c",
        "tr_scene.c",
        "tr_shade.c",
        "tr_shade_calc.c",
        "tr_shader.c",
        "tr_shadows.c",
        "tr_sky.c",
        "tr_surface.c",
        "tr_vbo.c",
        "tr_world.c",
    ],
    includes = ["."],
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":local",
        "//code/qcommon",
        "//code/qcommon:qfiles",
        "//code/renderercommon",
        "//code/renderergl2/glsl",
        "//third_party/json",
    ],
)

cc_library(
    name = "tr_subs",
    srcs = ["tr_subs.c"],
    includes = ["."],
    deps = [
        ":local",
        "//code/qcommon",
        "//code/qcommon:qfiles",
        "//code/renderercommon",
    ],
)
