# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

# TODO: Should we turn this into a library that ends up as dependency?
_SDL_LINK_OPTS = [
    "-F/Library/Frameworks",
    "-framework SDL2",
]

cc_library(
    name = "sdl_snd",
    srcs = ["sdl_snd.c"],
    defines = ["USE_VOIP"],
    linkopts = _SDL_LINK_OPTS,
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/client:api",
        "//code/client:snd_api",
        "//code/client:snd_internal_api",
        "//code/qcommon",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "sdl_input",
    srcs = [
        "sdl_input.c",
    ],
    linkopts = _SDL_LINK_OPTS,
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/client:api",
        "//code/client:snd_api",
        "//code/qcommon",
        "//code/sys:sys_local",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "sdl_renderer",
    srcs = [
        "sdl_gamma.c",
        "sdl_glimp.c",
        "sdl_icon.h",
    ],
    linkopts = _SDL_LINK_OPTS,
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/qcommon",
        "//code/renderer:renderer_common",
        "//code/sys:sys_local",
        "//third_party/sdl",
    ],
)
