# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "ENGINE_DEFINES", "FULL_WARNINGS")

cc_library(
    name = "sdl_snd",
    srcs = ["sdl_snd.c"],
    copts = FULL_WARNINGS + [
        "-Wno-padded",
        "-Wno-cast-align",
        "-Wno-sign-conversion",
    ],
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/client:api",
        "//code/client:snd_api",
        "//code/client:snd_internal_api",
        "//code/qcommon",
        "//third_party/libsdl",
    ],
)

cc_library(
    name = "sdl_input",
    srcs = ["sdl_input.c"],
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/client:api",
        "//code/client:snd_api",
        "//code/qcommon",
        "//code/sys:sys_local",
        "//third_party/libsdl",
    ],
)

cc_library(
    name = "sdl_renderer",
    srcs = [
        "sdl_gamma.c",
        "sdl_glimp.c",
    ],
    hdrs = ["sdl_icon.h"],
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/qcommon",
        "//code/renderer:internal_api",
        "//code/sys:sys_local",
        "//third_party/libsdl",
    ],
)
