# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "ENGINE_DEFINES", "FULL_WARNINGS")

genrule(
    name = "icon",
    srcs = ["//game/windows:quake3.ico"],
    outs = [
        "window_icon_data.h",
        "window_icon_dimensions.h",
    ],
    cmd = """
$(execpath @imagemagick//:magick) convert -channel RGBA -depth 8 $(execpath //game/windows:quake3.ico)[0] $(execpath window_icon_data.h)
$(execpath @imagemagick//:magick) identify -format "static size_t MagickImageWidth = %w;\nstatic size_t MagickImageHeight = %h;\n" $(execpath //game/windows:quake3.ico)[0] > $(execpath window_icon_dimensions.h)
    """,
    tools = ["@imagemagick//:magick"],
)

cc_library(
    name = "sdl_icon",
    hdrs = [":icon"],
    includes = ["."],
)

cc_library(
    name = "sdl_snd",
    srcs = ["sdl_snd.c"],
    copts = FULL_WARNINGS + [
        "-Wno-padded",
        "-Wno-cast-align",
        "-Wno-sign-conversion",
    ],
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/client:api",
        "//code/client:snd_api",
        "//code/client:snd_internal_api",
        "//code/qcommon",
        "//third_party/libsdl",
    ],
)

cc_library(
    name = "sdl_input",
    srcs = ["sdl_input.c"],
    copts = FULL_WARNINGS + [
        "-Wno-padded",
        "-Wno-assign-enum",
        "-Wno-sign-compare",
        "-Wno-sign-conversion",
        "-Wno-bad-function-cast",
    ],
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/client:api",
        "//code/client:snd_api",
        "//code/qcommon",
        "//code/sys:sys_local",
        "//third_party/libsdl",
    ],
)

cc_library(
    name = "sdl_renderer",
    srcs = ["sdl_glimp.c"],
    copts = FULL_WARNINGS + ["-Wno-padded"],
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":sdl_icon",
        "//code/qcommon",
        "//code/renderer:internal_api",
        "//code/sys:sys_local",
        "//third_party/libsdl",
    ],
)
