_SERVER_SRC = [
    "server.h",
    "sv_bot.c",
    "sv_ccmds.c",
    "sv_client.c",
    "sv_game.c",
    "sv_init.c",
    "sv_main.c",
    "sv_net_chan.c",
    "sv_snapshot.c",
    "sv_world.c",
]

cc_library(
    name = "server",
    srcs = _SERVER_SRC,
    visibility = ["//code/client:__pkg__"],
    deps = [
        "//code/botlib:api",
        "//code/game:bg_api",
        "//code/game:server_api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "server-dedicated",
    srcs = _SERVER_SRC,
    defines = ["DEDICATED"],
    deps = [
        "//code/botlib:api",
        "//code/game:bg_api",
        "//code/game:server_api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_binary(
    name = "ded",
    deps = [
        ":server-dedicated",
        "//code/qcommon:cm",
        "//code/qcommon:cmd-dedicated",
        "//code/qcommon:common-dedicated",
        "//code/botlib",
        "//code/sys:main-dedicated",
        # This next two should be conditional on operating system
        "//code/sys:sys_osx-dedicated",
        "//code/sys:sys_unix-dedicated",
        "//code/sys:sys_local-dedicated",
        "//code/qcommon:cvar",
        "//code/qcommon:files-dedicated",
        "//code/qcommon:net-dedicated",
        "//third_party/unzip",
        "//code/qcommon:vm",
    ],
)
